removed unnecessary files

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,5 @@
 {
-    "APPLICATION_NAME": "Corporate Internet Banking",
+    "APPLICATION_NAME": "Save gold scheme",
     "ERROR": "Error",
     "SUCCESS": "Success",
     "WARNING": "Warning",
